Better styling of the routes panel